_sass/mint.scss
.page-header {
  padding: 1rem 0;

  .page-header-main {
    display: flex;
    flex-direction: row;
    max-width: 64rem;
    margin: 0 auto;
    justify-content: space-between;

    @include large {
      padding: 0 6rem;
    }

    @include medium {
      padding: 0 4rem;
    }

    @include small {
      padding: 0 1rem;
    }

    img {
      width: 300px;
      height: 96px;
      margin-left: -16px;
    }

    ul {
      display: flex;
      flex-direction: row;
      list-style: none;
      margin: 0;
      padding: 0;

      li {
        margin: 3rem 1rem 1rem 1rem;
        border-bottom: solid 2px transparent;

        &:hover {
          border-bottom: solid 2px white;
        }

        a {
          color: white;
          text-decoration: none;
        }
      }
    }
  }
}

.page-header-center {
  max-width: 64rem;
  margin: 0 auto;

  @include large {
    padding: 0 6rem;
  }

  @include medium {
    padding: 0 4rem;
  }

  @include small {
    padding: 0 1rem;
  }
}

.site-footer-credits {
  font-size: 12px;
}

.project-name {
  margin: 0;
  line-height: 96px;
}

.flex {
  display: flex;
}

.flex-column {
  flex-direction: column;
}

.flex-row {
  flex-direction: row;
}

.flex-grow {
  flex-grow: 1;
}

.text-right {
  text-align: right;
}

.font-weight-300 {
  font-weight: 300;
}

.margin-right-1rem {
  margin-right: 1rem;
}

.img-square-5rem {
  min-width: 5rem;
  max-width: 5rem;
  max-height: 5rem;
}

.img-square-10rem {
  min-width: 10rem;
  max-width: 10rem;
  max-height: 10rem;
}

.btn {
  &.active {
    background-color: rgba(255, 255, 255, 0.3);
  }
}

.main-content {
  h1 {
    margin: 1rem 0;
  }
}

